fixed scrollbars on events and added custom scrollbar

--- a/CaveroClubhuis/wwwroot/css/Layout.css
+++ b/CaveroClubhuis/wwwroot/css/Layout.css
@@ -136,6 +136,7 @@
 .settingsspace{
     margin-left: 5px;
     margin-top: auto;
+    margin-bottom: auto;
 
 }
 
